--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ bs58 = "0.3.0"
 byteorder = "1.3.2"
 ring = "0.16.9"
 scrypt = { version = "0.2", default-features = false }
-serde = { version = "1.0.*", features = ["derive"] }
+serde = { version = "1.0.*", features = ["derive"], optional = true }
 thiserror = "1.0.11"
 unwrap = "1.2.1"
 zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
@@ -27,3 +27,5 @@ zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
 bincode = "1.2.0"
 
 [features]
+default = ["ser"]
+ser = ["serde"]
