--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["nanocryk <nanocryk@duniter.org>", "elois <elois@duniter.org>"]
 description = "Manage cryptographic operations for DUPs (DUniter Protocols)."
 repository = "https://git.duniter.org/libs/dup-crypto-rs"
 readme = "README.md"
-keywords = ["keys", "cryptography", "duniter", "dunitrust", "dup", "dubp", "dunp"]
+keywords = ["keys", "cryptography", "duniter", "dunitrust"]
 license = "AGPL-3.0"
 edition = "2018"
 
