--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2018"
 path = "src/lib.rs"
 
 [dependencies]
+aes = { version = "0.3.2", optional = true }
 base64 = "0.11.0"
 bs58 = "0.3.0"
 byteorder = "1.3.2"
@@ -28,4 +29,5 @@ bincode = "1.2.0"
 
 [features]
 default = ["ser"]
+aes256 = ["aes"]
 ser = ["serde"]
