--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/lib.rs"
 
 [dependencies]
 aes = { version = "0.3.2", optional = true }
+arrayvec = { version = "0.5.1", features = ["array-sizes-33-128", "array-sizes-129-255"], optional = true }
 base64 = "0.11.0"
 bs58 = "0.3.0"
 byteorder = "1.3.2"
@@ -28,6 +29,8 @@ zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
 bincode = "1.2.0"
 
 [features]
-default = ["ser"]
+default = ["dewip", "ser"]
+
 aes256 = ["aes"]
+dewip = ["aes256", "arrayvec"]
 ser = ["serde"]
