--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
 bincode = "1.2.0"
 
 [features]
-default = ["dewip", "ser"]
+default = ["dewif", "ser"]
 
 aes256 = ["aes"]
-dewip = ["aes256", "arrayvec"]
+dewif = ["aes256", "arrayvec"]
 ser = ["serde"]
