--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "dup-crypto"
 version = "0.9.0"
 authors = ["elois <c@elo.tf>"]
-description = "Manage cryptographic operations for DUPs (DUniter Protocols)."
+description = "Manage cryptographic operations for DUniter Protocols and the Duniter eco-system most broadly."
 repository = "https://git.duniter.org/libs/dup-crypto-rs"
 readme = "README.md"
 keywords = ["keys", "cryptography", "duniter", "dunitrust"]
