--- a/release.toml
+++ b/release.toml
@@ -1,6 +1,7 @@
 disable-publish = true
 disable-push = true
 no-dev-version = true
+pre-release-commit-message = "v{{version}}"
 pre-release-replacements = [
   {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
   {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
