--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ bs58 = "0.3.0"
 byteorder = "1.3.2"
 curve25519-dalek = "2.0.0"
 ring = "0.16.9"
-scrypt = { version = "0.2", default-features = false }
+scrypt = { version = "0.2", default-features = false, optional = true }
 serde = { version = "1.0.*", features = ["derive"], optional = true }
 thiserror = "1.0.11"
 unwrap = "1.2.1"
@@ -42,8 +42,9 @@ required-features = ["criterion"]
 default = ["dewif", "private_message", "rand", "ser"]
 
 aes256 = ["aes"]
-dewif = ["aes256", "arrayvec"]
+dewif = ["aes256", "arrayvec", "scrypt_feature"]
 x25519 = []
 private_message = ["arrayvec", "x25519", "rand"]
 rand = []
+scrypt_feature = ["scrypt"]
 ser = ["serde"]
